syntax = "proto3";

package realchat.profile.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/SARVESHVARADKAR123/RealChat/contracts/gen/go/profile/v1;profilev1";

service ProfileApi {
  rpc GetProfile(GetProfileRequest) returns (Profile);
  rpc UpdateProfile(UpdateProfileRequest) returns (Profile);
  rpc BatchGetProfiles(BatchGetProfilesRequest) returns (BatchGetProfilesResponse);
}

message BatchGetProfilesRequest {
  repeated string user_ids = 1;
}

message BatchGetProfilesResponse {
  repeated Profile profiles = 1;
}


message Profile {
  string user_id = 1;
  string display_name = 2;
  string avatar_url = 3;
  string bio = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetProfileRequest {
  string user_id = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  optional string display_name = 2;
  optional string avatar_url = 3;
  optional string bio = 4;
}
